--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Pink Tax and Consumerism</title>
   </head>
   <body>
-    <h1></h1>
+    <h1>Pink Tax and Consumerism</h1>
+      <h3> what is pink tax?</h3>
+      <ul>
+        Pink tax is not limited to woman's hygine products
+        - it's also found in the inflated prices of other 
+        goods as well as services marketed to women. (source 1)
+      </ul>
+
+    
   </body>
 </html>
