--- a/index.html
+++ b/index.html
@@ -9,10 +9,73 @@
     <h1>Pink Tax and Consumerism</h1>
       <h3> what is pink tax?</h3>
       <ul>
+        <li>
         Pink tax is not limited to woman's hygine products
         - it's also found in the inflated prices of other 
         goods as well as services marketed to women. (source 1)
+        </li>
       </ul>
+      <h3>Stats/Facts</h3>
+        <ul>
+          <li>
+            It tends to be 7% more expensive for products marketed
+            to woman; increased coverage of insurance. (Source 2)
+          </li>
+          <li>
+            Feminine products marketed towards woman tend to be more
+            expensive compared to products marketed for men. 
+            (e.g. toothbrushes, razors, feminine hygine products, etc..)
+          </li>
+        </ul>
+        <h3>what is Consumerism?</h3>
+        <ul>
+          <li>
+            Drive to consume and buy goods (3)
+          </li>
+          <li>
+            Not inherently bad in itself but rather combined with
+            predatory practices and overconsumption then it can become damaging
+            to individuals and society broadly. 
+          </li>
+        </ul>
+        <h3>What is extreme-consumption/over-consuption?</h3>
+        <ul>
+          <li>
+            overconsumption is characterized by excessive buying and material
+            possesions. (e.g. collecting stanley cups, tote bags, clothes, etc.)
+          </li>
+        </ul>
+        <h3>Why is extreme consumerism bad?</h3>
+        <ul>
+          <li>
+            it drives resource depletion, pollution and climate change.
+          </li>
+          <li>
+            The production, transport, and disposal of excess goods
+            generate massive amounts of waste and greenhouse gas emissions.
+          </li>
+          <li>
+            It fuels tghe exploration of low-wage workers in developing
+            contries to produce cheap goods. the consuption habits of the 
+            wealthy disproportionately harm the planet's poorest communities.
+          </li>
+          <li>
+            it premotes a "Hedonic treadmill" where the temporary happiness
+            from new purcheses fades quickly, leading to a cycle of chronic
+            dissatisfaction, finantial stress, and anxiety.
+          </li>
+        </ul>
+        <h3>Action</h3>
+        <ul>
+          <li>Knowning about it and spreading knowledge about the topic</li>
+          <li>Personal change in habits</li>
+          <li>Try to push for legistlation to try and ameliorate the issue</li>
+          <li>
+            Federal Trade Commission. related to the predictice priceing where corporations
+            target individuals and change prices depending on their information/pain points.
+            could use similar approach.
+          </li>
+        </ul>
 
     
   </body>
