--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <body>
     <div id="container">
       <h1>Pink Tax and Consumerism</h1>
-
-      <!-- Pink Tax Image -->
       <div class="image-placeholder">
-        <p>[Image: Pink Tax Illustration]</p>
+        <p>[Image: Pinx Tax]</p>
       </div>
 
       <h3>What is pink tax?</h3>
@@ -20,7 +18,7 @@
         <li>
           Pink tax is not limited to woman's hygine products - it's also found
           in the inflated prices of other goods as well as services marketed to
-          women. (source 1)
+          women. (Source 1)
         </li>
       </ul>
 
@@ -38,12 +36,11 @@
       </ul>
 
       <h3>What is Consumerism?</h3>
-      <!-- Consumerism Image -->
       <div class="image-placeholder">
-        <p>[Image: Consumerism Shopping Scene]</p>
+        <img src="consumerism.jpg" alt="Consumerism Image" />
       </div>
       <ul>
-        <li>Drive to consume and buy goods (3)</li>
+        <li>Drive to consume and buy goods (Source 3)</li>
         <li>
           Not inherently bad in itself but rather combined with predatory
           practices and overconsumption then it can become damaging to
@@ -60,9 +57,8 @@
       </ul>
 
       <h3>Why is extreme consumerism bad?</h3>
-      <!-- Environmental Impact Image -->
       <div class="image-placeholder">
-        <p>[Image: Environmental Impact]</p>
+        <img src="consume-more.jpg" alt="Consumerism Image" />
       </div>
       <ul>
         <li>it drives resource depletion, pollution and climate change.</li>
