--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="container">
       <h1>Pink Tax and Consumerism</h1>
       <div class="image-placeholder">
-        <p>[Image: Pinx Tax]</p>
+        <!-- <p>[Image: Pink Tax Illustration]</p> -->
+         <img src ="42955E23-D5A7-4E9E-85D6-78E2DADF801B.png">
       </div>
 
       <h3>What is pink tax?</h3>
