--- a/index.html
+++ b/index.html
@@ -10,115 +10,97 @@
     <div id="container">
       <h1>Pink Tax and Consumerism</h1>
       <div class="image-placeholder">
+        <!-- <p>[Image: Pink Tax Illustration]</p> -->
         <img src="42955E23-D5A7-4E9E-85D6-78E2DADF801B.png" />
       </div>
 
-      <h3>What is the Pink Tax?</h3>
+      <h3>What is pink tax?</h3>
       <div class="info-card">
         <ul>
-          <p>
+          <li>
             Pink tax is not limited to woman's hygine products - it's also found
-            in the inflated prices of other goods as well as services marketed to
-            women. (Source 1)
-          </p>
+            in the inflated prices of other goods as well as services marketed
+            to women. (Source 1)
+          </li>
         </ul>
       </div>
 
-      <h3>Stats & Facts</h3>
+      <h3>Stats/Facts</h3>
       <div class="info-card">
-        <ul>
-          <li>
-            It tends to be 7% more expensive for products marketed to woman;
-            increased coverage of insurance. (Source 2)
-          </li>
-          <li>
-            Feminine products marketed towards woman tend to be more expensive
-            compared to products marketed for men. (e.g. toothbrushes, razors,
-            feminine hygine products, etc..)
-          </li>
-        </ul>
-      </div>
+        <li>
+          It tends to be 7% more expensive for products marketed to woman;
+          increased coverage of insurance. (Source 2)
+        </li>
+        <li>
+          Feminine products marketed towards woman tend to be more expensive
+          compared to products marketed for men. (e.g. toothbrushes, razors,
+          feminine hygine products, etc..)
+        </li>
+      </ul>
+    </div>
 
       <h3>What is Consumerism?</h3>
       <div class="image-placeholder">
         <img src="consumerism.jpg" alt="Consumerism Image" />
       </div>
       <div class="info-card">
-        <ul>
-          <li>Drive to consume and buy goods (Source 3)</li>
-          <li>
-            Not inherently bad in itself but rather combined with predatory
-            practices and overconsumption then it can become damaging to
-            individuals and society broadly.
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>Drive to consume and buy goods (Source 3)</li>
+        <li>
+          Not inherently bad in itself but rather combined with predatory
+          practices and overconsumption then it can become damaging to
+          individuals and society broadly.
+        </li>
+      </ul>
+    </div>
 
-      <h3>What is extreme consumption?</h3>
+      <h3>What is extreme-consumption/over-consuption?</h3>
       <div class="info-card">
-        <ul>
-          <li>
-            Overconsumption is characterized by excessive buying and material
-            possesions. (e.g. collecting stanley cups, tote bags, clothes, etc.)
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          overconsumption is characterized by excessive buying and material
+          possesions. (e.g. collecting stanley cups, tote bags, clothes, etc.)
+        </li>
+      </ul>
+    </div>
 
       <h3>Why is extreme consumerism bad?</h3>
       <div class="image-placeholder">
-        <img src="consume-more.jpg" alt="Consume Image" />
+        <img src="consume-more.jpg" alt="Consumerism Image" />
       </div>
       <div class="info-card">
-        <ul>
-          <li>It drives resource depletion, pollution and climate change.</li>
-          <li>
-            The production, transport, and disposal of excess goods generate
-            massive amounts of waste and greenhouse gas emissions.
-          </li>
-          <li>
-            It fuels the exploration of low-wage workers in developing contries
-            to produce cheap goods. the consuption habits of the wealthy
-            disproportionately harm the planet's poorest communities.
-          </li>
-          <li>
-            It premotes a "Hedonic treadmill" where the temporary happiness from
-            new purcheses fades quickly, leading to a cycle of chronic
-            dissatisfaction, finantial stress, and anxiety.
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>it drives resource depletion, pollution and climate change.</li>
+        <li>
+          The production, transport, and disposal of excess goods generate
+          massive amounts of waste and greenhouse gas emissions.
+        </li>
+        <li>
+          It fuels tghe exploration of low-wage workers in developing contries
+          to produce cheap goods. the consuption habits of the wealthy
+          disproportionately harm the planet's poorest communities.
+        </li>
+        <li>
+          it premotes a "Hedonic treadmill" where the temporary happiness from
+          new purcheses fades quickly, leading to a cycle of chronic
+          dissatisfaction, finantial stress, and anxiety.
+        </li>
+      </ul>
+    </div>
 
       <h3>Action</h3>
       <div class="info-card">
-        <ul>
-          <li>Knowing about it and spreading knowledge about the topic</li>
-          <li>Personal change in habits</li>
-          <li>Try to push for legistlation to try and ameliorate the issue</li>
-          <li>
-            Federal Trade Commission. related to the predictive pricing where
-            corporations target individuals and change prices depending on their
-            information/pain points; we could use similar approach.
-          </li> 
-        </ul>
-      </div>
-    </div>
-
-
-    <h3>A Deceptive Approach</h3>
-    
       <ul>
-        <li>Proposing to address the pink tax by increasing prices for men's
-          products is an approach that is deceptive but it misframes the issue.</li>
-        <li>The line of reasoning leads to deflect from the core problem of gender-based price discrimination
-          against women. By suggesting men should also pay more, it shifts the
-          focus from the reality that women are being systematically overcharged
-          to a hypothetical scenario of universal overpricing. </li>
-        <li>The idea absolves manufacturers and retailers of their
-            responsibility for setting discriminatory prices and turns a clear issue
-            of injustice into a confusing debate about "fairness" for all.</li>
-        <li>The true objective of eliminating the pink tax is to achieve price equity and end
-              discriminatory practices, not to ensure that both genders are equally
-              exploited by inflated costs.</li>
-
+        <li>Knowning about it and spreading knowledge about the topic</li>
+        <li>Personal change in habits</li>
+        <li>Try to push for legistlation to try and ameliorate the issue</li>
+        <li>
+          Federal Trade Commission. related to the predictice priceing where
+          corporations target individuals and change prices depending on their
+          information/pain points. could use similar approach.
+        </li>
+      </ul>
+    </div>
+    </div>
   </body>
 </html>
