--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="container">
       <h1>Pink Tax and Consumerism</h1>
+      <button id="darkMode" class = "darkModeButton">☾</button>
       <div class="image-placeholder">
         <!-- <p>[Image: Pink Tax Illustration]</p> -->
         <img src="42955E23-D5A7-4E9E-85D6-78E2DADF801B.png" />
