--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pink Tax and Consumerism</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src = "script.js" defer></script>
   </head>
   <body>
     <div id="container">
       <h1>Pink Tax and Consumerism</h1>
       <button id="darkMode" class = "darkModeButton">☾</button>
+      <!-- <button id="darkModeSun" class = "lightModeButton">☀︎</button> -->
       <div class="image-placeholder">
         <!-- <p>[Image: Pink Tax Illustration]</p> -->
         <img src="42955E23-D5A7-4E9E-85D6-78E2DADF801B.png" />
