--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </ul>
     </div>
 
-      <h3>What is extreme-consumption/over-consuption?</h3>
+      <h3>What is over-consumption?</h3>
       <div class="info-card">
       <ul>
         <li>
@@ -79,7 +79,7 @@
           massive amounts of waste and greenhouse gas emissions.
         </li>
         <li>
-          It fuels tghe exploration of low-wage workers in developing contries
+          It fuels the exploration of low-wage workers in developing contries
           to produce cheap goods. the consuption habits of the wealthy
           disproportionately harm the planet's poorest communities.
         </li>
@@ -94,14 +94,10 @@
       <h3>Action</h3>
       <div class="info-card">
       <ul>
-        <li>Knowning about it and spreading knowledge about the topic</li>
+        <li>Knowing about it and spreading knowledge about the topic</li>
         <li>Personal change in habits</li>
-        <li>Try to push for legistlation to try and ameliorate the issue</li>
-        <li>
-          Federal Trade Commission. related to the predictice priceing where
-          corporations target individuals and change prices depending on their
-          information/pain points. could use similar approach.
-        </li>
+        <li>Try to push for legistlation to try and ameliorate the issue.</li>
+        <li>Advocate for legislative change and reform.</li>
       </ul>
     </div>
     </div>
