add break pts and pages

--- a/index.html
+++ b/index.html
@@ -5,101 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pink Tax and Consumerism</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src = "script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
       <h1>Pink Tax and Consumerism</h1>
-      <button id="darkMode" class = "darkModeButton">☾</button>
-      <!-- <button id="darkModeSun" class = "lightModeButton">☀︎</button> -->
+      <button id="dark-mode-toggle">☾</button>
+
       <div class="image-placeholder">
-        <!-- <p>[Image: Pink Tax Illustration]</p> -->
-        <img src="42955E23-D5A7-4E9E-85D6-78E2DADF801B.png" />
+        <img src="./public/pink-tax.png" alt="Pink Tax Image" />
       </div>
 
       <h3>What is pink tax?</h3>
       <div class="info-card">
         <ul>
           <li>
-            Pink tax is not limited to woman's hygine products - it's also found
-            in the inflated prices of other goods as well as services marketed
-            to women. (Source 1)
+            Pink tax is not limited to woman's hygiene products - it's also
+            found in the inflated prices of other goods as well as services
+            marketed to women. (Source 1)
           </li>
         </ul>
       </div>
 
       <h3>Stats/Facts</h3>
       <div class="info-card">
-        <li>
-          It tends to be 7% more expensive for products marketed to woman;
-          increased coverage of insurance. (Source 2)
-        </li>
-        <li>
-          Feminine products marketed towards woman tend to be more expensive
-          compared to products marketed for men. (e.g. toothbrushes, razors,
-          feminine hygine products, etc..)
-        </li>
-      </ul>
-    </div>
+        <ul>
+          <li>
+            It tends to be 7% more expensive for products marketed to woman;
+            increased coverage of insurance. (Source 2)
+          </li>
+          <li>
+            Feminine products marketed towards woman tend to be more expensive
+            compared to products marketed for men. (e.g. toothbrushes, razors,
+            feminine hygiene products, etc..)
+          </li>
+        </ul>
+      </div>
 
       <h3>What is Consumerism?</h3>
       <div class="image-placeholder">
-        <img src="consumerism.jpg" alt="Consumerism Image" />
+        <img src="./public/consumerism.jpg" alt="Consumerism Image" />
       </div>
       <div class="info-card">
-      <ul>
-        <li>Drive to consume and buy goods (Source 3)</li>
-        <li>
-          Not inherently bad in itself but rather combined with predatory
-          practices and overconsumption then it can become damaging to
-          individuals and society broadly.
-        </li>
-      </ul>
-    </div>
+        <ul>
+          <li>Drive to consume and buy goods (Source 3)</li>
+          <li>
+            Not inherently bad in itself but rather combined with predatory
+            practices and overconsumption then it can become damaging to
+            individuals and society broadly.
+          </li>
+        </ul>
+      </div>
 
       <h3>What is over-consumption?</h3>
       <div class="info-card">
-      <ul>
-        <li>
-          overconsumption is characterized by excessive buying and material
-          possesions. (e.g. collecting stanley cups, tote bags, clothes, etc.)
-        </li>
-      </ul>
-    </div>
+        <ul>
+          <li>
+            overconsumption is characterized by excessive buying and material
+            possessions. (e.g. collecting stanley cups, tote bags, clothes,
+            etc.)
+          </li>
+        </ul>
+      </div>
 
       <h3>Why is extreme consumerism bad?</h3>
       <div class="image-placeholder">
-        <img src="consume-more.jpg" alt="Consumerism Image" />
+        <img src="./public/consume-more.jpg" alt="Consumerism Image" />
       </div>
       <div class="info-card">
-      <ul>
-        <li>it drives resource depletion, pollution and climate change.</li>
-        <li>
-          The production, transport, and disposal of excess goods generate
-          massive amounts of waste and greenhouse gas emissions.
-        </li>
-        <li>
-          It fuels the exploration of low-wage workers in developing contries
-          to produce cheap goods. the consuption habits of the wealthy
-          disproportionately harm the planet's poorest communities.
-        </li>
-        <li>
-          it premotes a "Hedonic treadmill" where the temporary happiness from
-          new purcheses fades quickly, leading to a cycle of chronic
-          dissatisfaction, finantial stress, and anxiety.
-        </li>
-      </ul>
-    </div>
+        <ul>
+          <li>it drives resource depletion, pollution and climate change.</li>
+          <li>
+            The production, transport, and disposal of excess goods generate
+            massive amounts of waste and greenhouse gas emissions.
+          </li>
+          <li>
+            It fuels the exploration of low-wage workers in developing countries
+            to produce cheap goods. the consumption habits of the wealthy
+            disproportionately harm the planet's poorest communities.
+          </li>
+          <li>
+            it promotes a "Hedonic treadmill" where the temporary happiness from
+            new purchases fades quickly, leading to a cycle of chronic
+            dissatisfaction, financial stress, and anxiety.
+          </li>
+        </ul>
+      </div>
 
       <h3>Action</h3>
       <div class="info-card">
-      <ul>
-        <li>Knowing about it and spreading knowledge about the topic</li>
-        <li>Personal change in habits</li>
-        <li>Try to push for legistlation to try and ameliorate the issue.</li>
-        <li>Advocate for legislative change and reform.</li>
-      </ul>
-    </div>
+        <ul>
+          <li>Knowing about it and spreading knowledge about the topic</li>
+          <li>Personal change in habits</li>
+          <li>Try to push for legislation to try and ameliorate the issue.</li>
+          <li>Advocate for legislative change and reform.</li>
+        </ul>
+      </div>
+
+      <h3>Develop your Critical Thinking Skills</h3>
+      <div id="dragon-reader">
+        <p>Expand Your Mind by Reading</p>
+        <a href="./pages/reader.html">
+          <img src="./public/read.png" alt="dragon with a book" />
+        </a>
+      </div>
     </div>
   </body>
 </html>
